@@ -10,6 +10,7 @@ import java.util.Iterator;
 import java.util.List;
 
 import confdb.gui.menu.ScrollableMenu;
+import confdb.gui.treetable.TreeTable;
 
 import confdb.data.*;
 
@@ -105,6 +106,11 @@ public class ConfigurationTreeMouseListener extends MouseAdapter
     
     /** Enable path cloning context menu */
     private boolean enablePathCloning = false;
+    
+    /** Reference to jTreeTableParameters/ConfDbGUI.java 
+     * Bug: 75952
+     * FIX: Stop editing cell component when clicking the tree. */
+    private TreeTable TreeTableParameters; 
 
     
     //
@@ -141,6 +147,26 @@ public class ConfigurationTreeMouseListener extends MouseAdapter
     
     /** MouseAdapter: mouseReleased() */
     public void mouseReleased(MouseEvent e) { maybeShowPopup(e); }
+    
+    /** MouseAdapter: mouseClicked() */
+	public void mouseClicked(MouseEvent e) {
+
+		if (!tree.isEditable()) return;
+		if (TreeTableParameters == null) {
+			System.out.println("[ConfiguraitonTreeMouseListener] mouseClicked! TreeTableParameters == Null");
+			return;
+		}
+		
+		TreeTableParameters.stopEditing(); // Stop Edition in right upper panel
+	}
+	
+	/** Set TreeTable Component from the right panel to stop editing if needed
+     * Bug: 75952
+     * FIX: Stop editing cell component when clicking the tree. */
+	public void setTreeTable(TreeTable tt) {
+		TreeTableParameters = tt;
+	}
+	
     
     /** check if this event should really trigger the menu to be displayed */
     private void maybeShowPopup(MouseEvent e) {
